[APPBUG-1796] fd coupon spacing issues
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@25808 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/pdp_main.css
+++ b/projects/Media/docroot/assets/css/pdp/pdp_main.css
@@ -304,6 +304,10 @@ span.cssbutton.annotation:hover {
 	margin-left:10px;
 }
 
+.pdp-ecoupon .fdCoupon_cbCont{
+	margin-left:0px;
+}
+
 .pdp-ecoupon .fdCoupon_cbCont span,
 .pdp-ecoupon .fdCoupon_cbCont img{
 	display:inline-block;
